CHANGELOG
=========

1.x
---

 * Update supported Symfony versions